[project]
name = "supportops-openenv"
version = "0.1.0"
description = "Customer support simulation environment for OpenEnv"
authors = [
    { name = "Shipra Rathi" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"